--- a/MildBrainInjury/MildBrainInjury.csproj
+++ b/MildBrainInjury/MildBrainInjury.csproj
@@ -130,6 +130,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\feature.search.png" />
+    <Content Include="Assets\Mascot.png" />
     <Content Include="Assets\RleudCondensed-Bold.otf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
