--- a/MildBrainInjury/MildBrainInjury.csproj
+++ b/MildBrainInjury/MildBrainInjury.csproj
@@ -90,6 +90,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CustomToolTipUC.xaml.cs">
+      <DependentUpon>CustomToolTipUC.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SupportSevice.cs" />
     <Compile Include="CategorisedGroup.cs" />
     <Compile Include="App.xaml.cs">
@@ -117,6 +120,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
+    <Page Include="CustomToolTipUC.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -139,6 +146,7 @@
     <Content Include="Assets\feature.search.png" />
     <Content Include="Assets\HSClogo.png" />
     <Content Include="Assets\linkto.png" />
+    <Content Include="Assets\MapPin.png" />
     <Content Include="Assets\Mascot.png" />
     <Content Include="Assets\ApplicationIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
